# cloud-cost-optimizer

./: .gitignore  CLAUDE.md  README.md  main.py  prompts.md  pyproject.toml  slides.md
app/: database.py  main.py
app/api/: __init__.py  routes.py
app/commands/: generator.py
app/models/: db.py  schemas.py
app/parsers/: aws.py  azure.py
app/rules/: engine.py  idle_compute.py  old_snapshot.py  unattached_volume.py  unused_public_ip.py
app/web/: __init__.py  routes.py
app/web/templates/: _findings_table.html  base.html  detail.html  index.html  upload.html
sample_data/: README.md  aws_cur_sample.csv  azure_billing_sample.json
tests/: test_api.py  test_commands.py  test_parsers.py  test_rules.py
