[project]
name = "cloud-cost-optimizer"
version = "0.1.0"
description = "Cloud Cost Optimizer and Remediation Engine"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.28",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
